# forex-bot

./: .gitignore  README.md  pyproject.toml
data/: avaliable_markets.csv
src/: main.py
src/api/: __init__.py  client.py  instrument.py  main.py  market.py  stonex_utils.py
src/api/stonex/: __init__.py  account.py  client.py  instrument.py  market.py
src/api/stonex/utils/: stonex_utils.py
