[project]
name = "forex-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Kazi Shahria",email = "kazirshahria@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
